--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "prettier.tabWidth": 4,
-    "editor.detectIndentation": false
+  "prettier.useTabs": true,
+  "prettier.tabWidth": 4,
+  "editor.detectIndentation": false
 }
