--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"prettier.useTabs": true,
 	"prettier.tabWidth": 4,
-	"editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "workbench.colorTheme": "Brackets Light Pro"
 }
