--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@nuxt/content": "^1.3.2",
     "@nuxt/typescript-runtime": "^0.4.10",
     "@nuxtjs/axios": "^5.11.0",
-    "nuxt": "^2.13.0"
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.16.0",
+    "nuxt": "^2.13.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^1.0.3",
     "@nuxtjs/eslint-config": "^3.0.0",
     "@nuxtjs/eslint-config-typescript": "^2.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
-    "@nuxtjs/tailwindcss": "^2.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
