--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "@nuxt/content": "^1.3.2",
     "@nuxt/typescript-runtime": "^0.4.10",
     "@nuxtjs/axios": "^5.11.0",
-    "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.16.0",
-    "nuxt": "^2.13.0",
-    "vue": "^2.6.11"
+    "nuxt": "^2.13.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^1.0.3",
