--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@nuxtjs/axios": "^5.11.0",
 		"bootstrap-vue": "^2.16.0",
 		"firebase": "^7.17.2",
+		"js-cookie": "^2.2.1",
 		"nuxt": "^2.13.0"
 	},
 	"devDependencies": {
